--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js"
-  
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.2.6",
+    "axios": "^0.26.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.7",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.4"
   }
 }
