--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "express": "^4.17.1",
     "express-jwt": "^6.1.1",
     "form-data": "^4.0.0",
+    "html-to-text": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "juice": "^8.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.3",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "pug": "^3.0.2"
   }
 }
