--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "express-jwt": "^6.1.1",
     "form-data": "^4.0.0",
     "html-to-text": "^8.2.0",
@@ -23,6 +24,7 @@
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.3",
+    "nodemailer-express-handlebars": "^3.1.0",
     "nodemon": "^2.0.4",
     "pug": "^3.0.2"
   }
